# esp32-video-stream

./: .gitignore  CMakeLists.txt  README.md  play_video.sh  sdkconfig.defaults  sdkconfig.defaults.esp32p4  stream_video.py
main/: CMakeLists.txt  Kconfig.projbuild  board_defaults.c  board_interface.h  board_p4_ev.c  board_waveshare_wvshr200.c  idf_component.yml  main.c  main.cmake.extra
